--- a/main6.css
+++ b/main6.css
@@ -21,7 +21,7 @@ p {
 }
 header#mainHeader {
 	height: 185px;
-	background: url(images/logo.png) no-repeat 25px center;
+	background: url(images/jeroo.png) no-repeat 25px center;
 	padding: 0 75px 0 300px;
 	position: relative;
 	border-bottom: 2px solid #7f7f7f;
@@ -45,14 +45,13 @@ header#mainHeader ul li a {
 	border-right: 1px solid black;
 	text-decoration: none;
 }
-
-header#mainHeader ul li a:hover{
-	color: #c00000;
-
-}
 header#mainHeader ul li a.last{
 	border:none;
 }
+header#mainHeader ul li a:hover{
+	color: #c00000;
+}
+
 section#content {
 	float: left;
 	width: 600px;
